pkg/provider/kubernetes/ingress-nginx/fixtures/ingresses/ingress-with-sticky.yml
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: ingress-with-sticky
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/session-cookie-name: foobar
    nginx.ingress.kubernetes.io/session-cookie-secure: "true"
    nginx.ingress.kubernetes.io/session-cookie-path: "/foobar"
    nginx.ingress.kubernetes.io/session-cookie-domain: "foo.localhost"
    nginx.ingress.kubernetes.io/session-cookie-samesite: "None"
    nginx.ingress.kubernetes.io/session-cookie-conditional-samesite-none: "true"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "42"
    nginx.ingress.kubernetes.io/session-cookie-expires: "42"

spec:
  ingressClassName: nginx
  rules:
    - host: sticky.localhost
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: whoami
                port:
                  number: 80
